--- a/app_main/templates/main.html
+++ b/app_main/templates/main.html
@@ -58,11 +58,11 @@
                           {% endif %}
                           <hr>
                           <div class="text-center">
-                            <a href="signup">회원가입</a>
+                            <a href="signup/sign-up">회원가입</a>
                           </div>
                           <br>
                           <div class="text-center">
-                            <a href="forgot-password.html">비밀번호 찾기</a>
+                            <a href="forgot-passwd.html">비밀번호 찾기</a>
                           </div>
                       </div>
                   </div>
