--- a/app_signup/templates/exists.html
+++ b/app_signup/templates/exists.html
@@ -1,16 +1,3 @@
-<!-- <!DOCTYPE html>
-{% load static %}
-<html>
-    <head>
-        <ink rel="stylesheet" href="{% static 'css/sb-admin-2' %}">
-        <meta charset="UTF-8">
-        <title>회원가입 실패</title>
-    </head>
-    <body>
-        이미 존재하는 아이디입니다.
-        <a href="/test/signup/">회원가입 다시하기</a>
-    </body>
-</html> -->
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -58,7 +45,7 @@
                             <br>
                             <br>
                             <div class="text-center">
-                            <a href="/signup/sign-up/">Register Again!</a>
+                            <a href="/signup/">Register Again!</a>
                             </div>
                             <br>
                             <br>
@@ -68,7 +55,7 @@
                             <br>
                             <br>
                             <div class="text-center">
-                                <a class="small" href="login">Already have an account? Login!</a>
+                                <a class="small" href="/">Did you remember the account? Login!</a>
                             </div>
                         </div>
                     </div>
