--- a/app_myinfo/templates/myinfo.html
+++ b/app_myinfo/templates/myinfo.html
@@ -218,8 +218,8 @@
                     </button>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">취소</button>
+                    <a class="btn btn-primary" href="{% url 'try_logout' %}">로그아웃</a>
                 </div>
             </div>
         </div>
