--- a/app_tradelog/templates/tradelog.html
+++ b/app_tradelog/templates/tradelog.html
@@ -57,7 +57,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="holdings">
+                <a class="nav-link" href="holding">
                     <span style="font-size : 12pt">보유자산</span></a>
             </li>
 
