--- a/app_myinfo/templates/myinfo.html
+++ b/app_myinfo/templates/myinfo.html
@@ -14,7 +14,7 @@
     <!-- Custom fonts for this template -->
     <link href={% static 'vendor/fontawesome-free/css/all.min.css' %} rel="stylesheet" type="text/css">
     <link
-        href={% static "https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" %}
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -43,33 +43,33 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="trade">
+                <a class="nav-link" href="{% url 'trade' %}">
                     <span style="font-size : 12pt">거래소</span></a>
             </li>
 
-            <!-- Nav Item - Charts -->
+            {% comment %} <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="tradelog">
+                <a class="nav-link" href="{% url 'tradelog' %}">
                     <span style="font-size : 12pt">거래내역</span></a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="holdings">
+                <a class="nav-link" href="{% url 'holdings' %}">
                     <span style="font-size : 12pt">보유자산</span></a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="account">
+                <a class="nav-link" href="{% url 'account' %}">
                     <span style="font-size : 12pt">입출금</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="useredit">
+                <a class="nav-link" href="{% url 'myinfoedit' %}">
                     <span style="font-size : 12pt">회원정보</span></a>
-            </li>
+            </li> {% endcomment %}
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
