--- a/app_holding/templates/holding.html
+++ b/app_holding/templates/holding.html
@@ -193,8 +193,7 @@
                                         <div class="card-header py-3">
                                             <h6 class="m-0 font-weight-bold text-primary">Donut Chart</h6>
                                         </div>
-                                        <div id="chartContainer" style="height: 370px; width: 100%;"></div>
-                                        <script type="text/javascript" src='{% static "mychart.js" %}'></script>
+                                        <!-- <div id="chartContainer" style="height: 370px; width: 100%;"></div> -->
                                     </div>
                                 </div>
                             </div>
