userlist -> auth.model.User

--- a/app_signup/templates/get-passwd.html
+++ b/app_signup/templates/get-passwd.html
@@ -46,7 +46,7 @@
                             <br>
                             <div class="text-center">
                             <form>
-                                {{password}}
+                                {{passwd}}
                             </form>
                             </div>
                             <br>
