--- a/app_account/templates/after_account.html
+++ b/app_account/templates/after_account.html
@@ -1,5 +1,6 @@
 <!-- {% load static %}
 <link rel = "stylesheet" type ="text/css" href ="{% static 'bootstrap.css' %}"> -->
+<!-- test -->
 
 <!DOCTYPE html> 
 {% load static %}
