--- a/app_account/templates/Cong.html
+++ b/app_account/templates/Cong.html
@@ -41,7 +41,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="trade">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'trade' %}">
                 <div class="sidebar-brand-text mx-3" style="font-size : 20pt">Coin On</div>
             </a>
 
@@ -50,33 +50,28 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/trade">
+                <a class="nav-link" href="{% url 'trade' %}">
                     <span style="font-size : 12pt">거래소</span></a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/tradelog">
+                <a class="nav-link" href="{% url 'tradelog' %}">
                     <span style="font-size : 12pt">거래내역</span></a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/holdings">
+                <a class="nav-link" href="{% url 'holding' %}">
                     <span style="font-size : 12pt">보유자산</span></a>
             </li>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/account">
+                <a class="nav-link" href="{% url 'account' %}">
                     <span style="font-size : 12pt">입출금</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="useredit">
-                    <span style="font-size : 12pt">회원정보</span></a>
-            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -174,7 +169,7 @@
                                         <br>
                                     </ul>
                                 <div class="my-2"></div>
-                                    <a href="/account" class="btn btn-primary btn-icon-split btn-lg">
+                                    <a href="{% url 'account' %}" class="btn btn-primary btn-icon-split btn-lg">
                                         <span class="icon text-white-50">
                                             <i class="fas fa-arrow-right"></i>
                                         </span>
