--- a/app_myinfo/templates/myinfo.html
+++ b/app_myinfo/templates/myinfo.html
@@ -55,7 +55,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'holdings' %}">
+                <a class="nav-link" href="{% url 'holding' %}">
                     <span style="font-size : 12pt">보유자산</span></a>
             </li>
 
