--- a/app_myinfo/templates/myinfo.html
+++ b/app_myinfo/templates/myinfo.html
@@ -47,7 +47,7 @@
                     <span style="font-size : 12pt">거래소</span></a>
             </li>
 
-            {% comment %} <!-- Nav Item - Charts -->
+            <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'tradelog' %}">
                     <span style="font-size : 12pt">거래내역</span></a>
@@ -65,7 +65,7 @@
                     <span style="font-size : 12pt">입출금</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
+            {% comment %} <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'myinfoedit' %}">
                     <span style="font-size : 12pt">회원정보</span></a>
@@ -129,7 +129,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600">Name</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600">{{ id }}</span>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
