--- a/app_myinfo/templates/myinfo.html
+++ b/app_myinfo/templates/myinfo.html
@@ -34,7 +34,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="trade">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'trade' %}">
                 <div class="sidebar-brand-text mx-3" style="font-size : 20pt">Coin On</div>
             </a>
 
