--- a/app_trade/templates/error1.html
+++ b/app_trade/templates/error1.html
@@ -65,6 +65,7 @@
                     <span style="font-size : 12pt">입출금</span></a>
             </li>
 
+            <!-- Nav Item - Tables -->
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -144,143 +145,15 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    
-                    <!-- Content Row -->
-                    <div class="row">
-                      
-<!-- First Column -->
-<div class="col-lg-6">
+                    <!-- 404 Error Text -->
+                    <div class="text-center">
+                        <div class="error mx-auto" data-text="404">Error Type : 1</div>
+                        <p class="lead text-gray-800 mb-5">가격이 음수값입니다.</p>
+                        <a href="{% url 'trade' %}">&larr; 거래화면으로 돌아가기 </a>
+                    </div>
 
-  <!-- Custom Text Color Utilities -->
-  <div class="card shadow mb-4">
-      <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">코인 정보</h6>
-      </div>
-      <div class="card-body">
-          {% for data in coin_data %}
-            <p>코인명 : {{data.coin_name}}</p>
-            <p>현재 코인 가격 : {{data.coin_price}}</p>
-          {% endfor %}
-      </div>
-  </div>
-
-  <!-- Custom Font Size Utilities -->
-  <div class="card shadow mb-4">
-      <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">호가창</h6>
-      </div>
-      <div class="card-body">
-          <p class="text-xs">.text-xs</p>
-          <p class="text-lg mb-0">.text-lg</p>
-      </div>
-  </div>
-
-</div>
-
-
-<!-- Second Column -->
-<div class="col-lg-6"> 
-<form action="{% url 'submit' %}" method="POST">
-  <!-- Background Gradient Utilities -->
-  <div class="card shadow mb-4">
-      <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">매수/매도 주문</h6>
-      </div>
-        <div class="card-body">
-
-            <div class="form-group">
-                <div for="coin_select">코인명</div>
-                <select class="form-control" id="coin_select" name="coin_name">
-                    {% for coin in coin_list %}
-                    <option value="{{ coin.coin_name }}">{{ coin.coin_name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-            <label class="form-check-label" for="inlineRadio1">매수</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-            <label class="form-check-label" for="inlineRadio2">매도</label>
-          </div>
-          <div>
-            <br>
-            <p>주문가능가격</p>
-            <br>
-          </div>
-          <div class="form-group">
-              <label for="order_price">주문가격</label>
-              <input type="number" class="form-control text-right" id="order_price" name="order_price" placeholder="0 KRW">
-          </div>
-          <div class="form-group">
-              <label for="order_number">주문수량</label>
-              <input type="number" class="form-control text-right" id="order_number" name="order_number" placeholder="-">
-          </div>
-          <div>
-            <br>
-
-            <p>총 주문가격</p>
-            <br>
-          </div>
-            <button type="submit" class="btn btn-primary">주문하기</button>
-        </div>
-  </div>
-</form>
-</div>
-
-<!-- Third Column -->
-<!-- <form action="{% url 'submit' %}" method="POST">
-<input class="btn" type="submit" value="test" name="test">
-</form> -->
-
-
-<!-- Grayscale Utilities -->
-<div class="card shadow mb-4 col-lg-12">
-  <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">코인별 실시간 정보</h6>
-  </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-              <thead>
-                  <tr>
-                      <th>코인명</th>
-                      <th>가격</th>
-                  </tr>
-              </thead>
-              <tbody>
-                {% for data in coin_list %}
-                <tr>
-                    <td>              
-                      <form action="{% url 'nameScratch' %}" method="POST">
-                        <button type="submit" name="coin_name" value="{{ data.coin_name }}" href>
-                          {{data.coin_name}}
-                        </button>
-                      </form>
-                    </td>
-                    <td>{{data.coin_price}}</td>
-                </tr>
-                {% endfor %} 
-                <!-- {% for data in coin_list %}
-                <tr>
-                    <td>              
-                        <button type="submit" name="coin_name" value="{{ data.coin_name }}" href>
-                          {{data.coin_name}}
-                        </button>
-                    </td>
-                    <td>{{data.coin_price}}</td>
-                </tr>
-                {% endfor %} -->
-              </tbody>
-          </table>
-        </div>
-      </div>
-</div>
-</div>
-</div>
-<!-- /.container-fluid -->
+                </div>
+                <!-- /.container-fluid -->
 
             </div>
             <!-- End of Main Content -->
@@ -345,4 +218,3 @@
 </body>
 
 </html>
-
