--- a/app_signup/templates/get-passwd.html
+++ b/app_signup/templates/get-passwd.html
@@ -38,7 +38,7 @@
                             <br>
                             <br>
                             <div class="text-center">
-                                <h1 class="h3 text-gray-900 mb-3">비밀번호를 찾았습니다!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">비밀번호를 찾았습니다!</h1>
                             </div>
                             <br>
                             <br>
@@ -56,6 +56,7 @@
                             <br>
                             <br>
                             <div class="text-center">
+                                <a class="small" href="/authurls/password_reset">Password_Resset</a>
                                 <a class="small" href="/">Go to Login!</a>
                             </div>
                         </div>
