--- a/app_signup/templates/get-passwd.html
+++ b/app_signup/templates/get-passwd.html
@@ -43,7 +43,6 @@
                             <br>
                             <br>
                             <br>
-                            <br>
                             <div class="text-center">
                             <form>
                                 {{passwd}}
@@ -56,7 +55,7 @@
                             <br>
                             <br>
                             <div class="text-center">
-                                <a class="small" href="/authurls/password_reset">Password_Resset</a>
+                                <a class="small" href="/authurls/password_reset">Password_Resset</a><hr>
                                 <a class="small" href="/">Go to Login!</a>
                             </div>
                         </div>
