--- a/app_trade/templates/trade.html
+++ b/app_trade/templates/trade.html
@@ -124,7 +124,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600">Name</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600">{{id}}</span>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
