--- a/app_holding/templates/holding.html
+++ b/app_holding/templates/holding.html
@@ -157,7 +157,7 @@
                                         </div>
                                         <div class="card-body">
                                             <div class="table-responsive">
-                                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                                <table class="table table-bordered" width="100%" cellspacing="0">
                                                 {%for data in holding_list_top%}
                                                 <tr>
                                                     <td id="holding_KRW">보유KRW:{{data.holding_KRW}}KRW</td>
